--- a/src/index.html
+++ b/src/index.html
@@ -74,15 +74,159 @@
                     </div>
                 </div>
             </section>
+            <section class="advantages">
+                <div class="container">
+                    <div class="advantages__list">
+                        <div class="advantages__item">
+                            <div class="advantages__img">
+                                <img src="icons/advantages/advantages_1.svg" alt="">
+                            </div>
+                            <h3 class="advantages__deskr">Гибкие цены</h3>
+                        </div>
+                        <div class="advantages__item">
+                            <div class="advantages__img">
+                                <img src="icons/advantages/advantages_2.svg" alt="">
+                            </div>
+                            <h3 class="advantages__deskr">Точные показатели</h3>
+                        </div>
+                        <div class="advantages__item">
+                            <div class="advantages__img">
+                                <img src="icons/advantages/advantages_3.svg" alt="">
+                            </div>
+                            <h3 class="advantages__deskr">Поддержка адаптеров</h3>
+                        </div>
+                        <div class="advantages__item">
+                            <div class="advantages__img">
+                                <img src="icons/advantages/advantages_4.svg" alt="">
+                            </div>
+                            <h3 class="advantages__deskr">Аккумулятор работает дольше</h3>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="about-us">
+                <div class="container">
+                    <div class="about-us__wrapper">
+                        <h2 class="about-us__title">О нас</h2>
+                        <p class="about-us__deskr">Цифровые лаборатории для учеников и учителей - эффективное средство для практического изучения естественнонаучных дисциплин в современной школе. Цифровые лаборатории для учеников и учителей - эффективное средство для практического изучения естественнонаучных дисциплин в современной школе. </p>
+                        <button class="about-us__btn btn">Заказать звонок</button>
+                    </div>
+                </div>
+            </section>
+            <section class="laboratory">
+                <div class="container">
+                    <h2 class="laboratory__title">Цифровая лаборатория</h2>
+                    <div class="laboratory__list">
+                        <div class="laboratory__item">
+                            <div class="laboratory__item_img">
+                                <img src="img/laboratory/laboratory_1.png" alt="">
+                            </div>
+                            <h3 class="laboratory__item_title">Цифровая лаборатория по математике</h3>
+                            <p class="laboratory__item_deskr">профильный уровень</p>
+                        </div>
+                        <div class="laboratory__item">
+                            <div class="laboratory__item_img">
+                                <img src="img/laboratory/laboratory_2.png" alt="">
+                            </div>
+                            <h3 class="laboratory__item_title">Цифровая лаборатория по математике</h3>
+                            <p class="laboratory__item_deskr">Базовый уровень</p>
+                        </div>
+                        <div class="laboratory__item">
+                            <div class="laboratory__item_img">
+                                <img src="img/laboratory/laboratory_3.png" alt="">
+                            </div>
+                            <h3 class="laboratory__item_title">Цифровая лаборатория по биологии</h3>
+                            <p class="laboratory__item_deskr">Базовый уровень</p>
+                        </div>
+                        <div class="laboratory__item">
+                            <div class="laboratory__item_img">
+                                <img src="img/laboratory/laboratory_4.png" alt="">
+                            </div>
+                            <h3 class="laboratory__item_title">Цифровая лаборатория по физиологии</h3>
+                            <p class="laboratory__item_deskr">Базовый уровень</p>
+                        </div>
+                        <div class="laboratory__item">
+                            <div class="laboratory__item_img">
+                                <img src="img/laboratory/laboratory_5.png" alt="">
+                            </div>
+                            <h3 class="laboratory__item_title">Цифровая лаборатория по химии</h3>
+                            <p class="laboratory__item_deskr">Базовый уровень</p>
+                        </div>
+                        <div class="laboratory__item">
+                            <div class="laboratory__item_img">
+                                <img src="img/laboratory/laboratory_6.png" alt="">
+                            </div>
+                            <h3 class="laboratory__item_title">Цифровая лаборатория по биологии</h3>
+                            <p class="laboratory__item_deskr">Базовый уровень</p>
+                        </div>
+                    </div>
+                    <div class="laboratory__shevron">
+                        <button class="laboratory__btn">
+                            <svg width="11" height="20" viewBox="0 0 11 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path class="shevron" d="M10.1782 1.53857L1.61537 10.1014L10.1782 18.6643" stroke="black" stroke-width="1.57953"/>
+                            </svg>                                
+                        </button>
+                        <button class="laboratory__btn laboratory__btn_right">
+                            <svg  width="11" height="20" viewBox="0 0 11 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path class="shevron" d="M10.1782 1.53857L1.61537 10.1014L10.1782 18.6643" stroke="black" stroke-width="1.57953"/>
+                            </svg>                                
+                        </button>
+                    </div>
+                </div>
+            </section>
+            <section class="feedback">
+                <div class="container">
+                    <div class="feedback__wrapper">
+                        <h2 class="feedback__title">Мы открыты для общения</h2>
+                        <p class="feedback__deskr">Гарантируем быструю реакцию на обращения через форму обратной связи</p>
+                        <form action="#" class="form">
+                            <div class="form__top">
+                                <input class="form__input" placeholder="Имя" required name="name" id="name" type="text">
+                                <input class="form__input" placeholder="+7(___)___-__-__" required name="phone" id="phone" type="text">
+                                <input class="form__input" placeholder="your@mail.com" required name="email" id="email" type="email">
+                            </div>
+                            <button class="about-us__btn btn">Заказать звонок</button>
+                        </form>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer class="footer">
-            
+            <nav>
+                <div class="container">
+                    <div class="menu">
+                        <a class="menu__logo" href="#">
+                             <div class="menu__logo_img">
+                                 <svg width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                 <path class="logo-main" d="M3.89511 28.8187V18.6517C15.5932 18.6517 25.0764 28.1349 25.0764 39.833V50C13.3783 50 3.89511 40.5168 3.89511 28.8187Z" fill="black"/>
+                                 <path class="logo-main" d="M47.1049 12.7088V2.54175C35.4068 2.54175 25.9236 12.0249 25.9236 23.723V33.89C37.6217 33.89 47.1049 24.4069 47.1049 12.7088Z" fill="black"/>
+                                 <circle class="logo-main" cx="17.0275" cy="8.47251" r="8.47251" fill="black"/>
+                                 </svg>
+                            </div>
+                        </a>
+                        <ul class="menu__list">
+                            <li class="menu__item"><a href="#" class="menu__link">О компании</a></li>
+                            <li class="menu__item"><a href="#" class="menu__link">Товары</a></li>
+                            <li class="menu__item"><a href="#" class="menu__link">Сотрудничество</a></li>
+                            <li class="menu__item"><a href="#" class="menu__link">Контакты</a></li>
+                        </ul>
+                         <a class="menu__call" href="tel:+79371234567">+7 (937) 1234567</a>
+                    </div>
+ 
+                </div> 
+                <div class="hamburger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>   
+            </nav>
         </footer>
     </div>
 
-    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script type="text/javascript" src="js/slick.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/jquery.maskedinput.min.js"></script>
     <script src="js/jquery.validate.min.js"></script>
     <script src="js/script.js"></script>
 </body>
