start addaptive site

--- a/src/index.html
+++ b/src/index.html
@@ -24,9 +24,9 @@
                            </div>
                        </a>
                        <ul class="menu__list">
-                           <li class="menu__item"><a href="#" class="menu__link">О компании</a></li>
-                           <li class="menu__item"><a href="#" class="menu__link">Товары</a></li>
-                           <li class="menu__item"><a href="#" class="menu__link">Сотрудничество</a></li>
+                           <li class="menu__item"><a href="#about-us" class="menu__link">О компании</a></li>
+                           <li class="menu__item"><a href="#laboratory" class="menu__link">Товары</a></li>
+                           <li class="menu__item"><a href="#feedback" class="menu__link">Сотрудничество</a></li>
                            <li class="menu__item"><a href="#" class="menu__link">Контакты</a></li>
                        </ul>
                         <a class="menu__call" href="tel:+79371234567">+7 (937) 1234567</a>
@@ -41,7 +41,7 @@
            </nav>
        </header>
         <main class="main">
-            <section class="promo">
+            <!-- <section class="promo">
                 <div class="container">
                     <div class="promo__wrapper">
                         <div class="promo__social">
@@ -73,8 +73,8 @@
                         </div>
                     </div>
                 </div>
-            </section>
-            <section class="advantages">
+            </section> -->
+            <!-- <section class="advantages">
                 <div class="container">
                     <div class="advantages__list">
                         <div class="advantages__item">
@@ -103,8 +103,8 @@
                         </div>
                     </div>
                 </div>
-            </section>
-            <section class="about-us">
+            </section> -->
+           <!--  <section class="about-us" id="about-us">
                 <div class="container">
                     <div class="about-us__wrapper">
                         <h2 class="about-us__title">О нас</h2>
@@ -112,8 +112,8 @@
                         <button class="about-us__btn btn">Заказать звонок</button>
                     </div>
                 </div>
-            </section>
-            <section class="laboratory">
+            </section> -->
+            <!-- <section class="laboratory" id="laboratory">
                 <div class="container">
                     <h2 class="laboratory__title">Цифровая лаборатория</h2>
                     <div class="laboratory__list">
@@ -173,8 +173,8 @@
                         </button>
                     </div>
                 </div>
-            </section>
-            <section class="feedback">
+            </section> -->
+            <!-- <section class="feedback" id="feedback">
                 <div class="container">
                     <div class="feedback__wrapper">
                         <h2 class="feedback__title">Мы открыты для общения</h2>
@@ -189,9 +189,9 @@
                         </form>
                     </div>
                 </div>
-            </section>
+            </section> -->
         </main>
-        <footer class="footer">
+        <!-- <footer class="footer">
             <nav>
                 <div class="container">
                     <div class="menu">
@@ -205,9 +205,9 @@
                             </div>
                         </a>
                         <ul class="menu__list">
-                            <li class="menu__item"><a href="#" class="menu__link">О компании</a></li>
-                            <li class="menu__item"><a href="#" class="menu__link">Товары</a></li>
-                            <li class="menu__item"><a href="#" class="menu__link">Сотрудничество</a></li>
+                            <li class="menu__item"><a href="#about-us" class="menu__link">О компании</a></li>
+                            <li class="menu__item"><a href="#laboratory" class="menu__link">Товары</a></li>
+                            <li class="menu__item"><a href="#feedback" class="menu__link">Сотрудничество</a></li>
                             <li class="menu__item"><a href="#" class="menu__link">Контакты</a></li>
                         </ul>
                          <a class="menu__call" href="tel:+79371234567">+7 (937) 1234567</a>
@@ -220,7 +220,7 @@
                     <span></span>
                 </div>   
             </nav>
-        </footer>
+        </footer> -->
     </div>
 
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
