--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
            </nav>
        </header>
         <main class="main">
-            <!-- <section class="promo">
+            <section class="promo">
                 <div class="container">
                     <div class="promo__wrapper">
                         <div class="promo__social">
@@ -73,8 +73,8 @@
                         </div>
                     </div>
                 </div>
-            </section> -->
-            <!-- <section class="advantages">
+            </section>
+            <section class="advantages">
                 <div class="container">
                     <div class="advantages__list">
                         <div class="advantages__item">
@@ -103,17 +103,17 @@
                         </div>
                     </div>
                 </div>
-            </section> -->
-           <!--  <section class="about-us" id="about-us">
+            </section>
+            <section class="about-us" id="about-us">
                 <div class="container">
                     <div class="about-us__wrapper">
                         <h2 class="about-us__title">О нас</h2>
-                        <p class="about-us__deskr">Цифровые лаборатории для учеников и учителей - эффективное средство для практического изучения естественнонаучных дисциплин в современной школе. Цифровые лаборатории для учеников и учителей - эффективное средство для практического изучения естественнонаучных дисциплин в современной школе. </p>
+                        <p class="about-us__deskr">Цифровые лаборатории для учеников и учителей - эффективное средство для практического изучения естественнонаучных дисциплин в современной школе. <span>Цифровые лаборатории для учеников и учителей - эффективное средство для практического изучения естественнонаучных дисциплин в современной школе.</span> </p>
                         <button class="about-us__btn btn">Заказать звонок</button>
                     </div>
                 </div>
-            </section> -->
-            <!-- <section class="laboratory" id="laboratory">
+            </section>
+            <section class="laboratory" id="laboratory">
                 <div class="container">
                     <h2 class="laboratory__title">Цифровая лаборатория</h2>
                     <div class="laboratory__list">
@@ -173,7 +173,7 @@
                         </button>
                     </div>
                 </div>
-            </section> -->
+            </section>
             <!-- <section class="feedback" id="feedback">
                 <div class="container">
                     <div class="feedback__wrapper">
