--- a/src/index.html
+++ b/src/index.html
@@ -118,44 +118,32 @@
                     <h2 class="laboratory__title">Цифровая лаборатория</h2>
                     <div class="laboratory__list">
                         <div class="laboratory__item">
-                            <div class="laboratory__item_img">
-                                <img src="img/laboratory/laboratory_1.png" alt="">
-                            </div>
+                            <img class="laboratory__item_img" src="img/laboratory/laboratory_1.png" alt="">
                             <h3 class="laboratory__item_title">Цифровая лаборатория по математике</h3>
                             <p class="laboratory__item_deskr">профильный уровень</p>
                         </div>
                         <div class="laboratory__item">
-                            <div class="laboratory__item_img">
-                                <img src="img/laboratory/laboratory_2.png" alt="">
-                            </div>
+                            <img class="laboratory__item_img" src="img/laboratory/laboratory_2.png" alt="">
                             <h3 class="laboratory__item_title">Цифровая лаборатория по математике</h3>
                             <p class="laboratory__item_deskr">Базовый уровень</p>
                         </div>
                         <div class="laboratory__item">
-                            <div class="laboratory__item_img">
-                                <img src="img/laboratory/laboratory_3.png" alt="">
-                            </div>
+                            <img class="laboratory__item_img" src="img/laboratory/laboratory_3.png" alt="">
                             <h3 class="laboratory__item_title">Цифровая лаборатория по биологии</h3>
                             <p class="laboratory__item_deskr">Базовый уровень</p>
                         </div>
                         <div class="laboratory__item">
-                            <div class="laboratory__item_img">
-                                <img src="img/laboratory/laboratory_4.png" alt="">
-                            </div>
+                            <img class="laboratory__item_img" src="img/laboratory/laboratory_4.png" alt="">
                             <h3 class="laboratory__item_title">Цифровая лаборатория по физиологии</h3>
                             <p class="laboratory__item_deskr">Базовый уровень</p>
                         </div>
                         <div class="laboratory__item">
-                            <div class="laboratory__item_img">
-                                <img src="img/laboratory/laboratory_5.png" alt="">
-                            </div>
+                            <img class="laboratory__item_img" src="img/laboratory/laboratory_5.png" alt="">
                             <h3 class="laboratory__item_title">Цифровая лаборатория по химии</h3>
                             <p class="laboratory__item_deskr">Базовый уровень</p>
                         </div>
                         <div class="laboratory__item">
-                            <div class="laboratory__item_img">
-                                <img src="img/laboratory/laboratory_6.png" alt="">
-                            </div>
+                            <img class="laboratory__item_img" src="img/laboratory/laboratory_6.png" alt="">
                             <h3 class="laboratory__item_title">Цифровая лаборатория по биологии</h3>
                             <p class="laboratory__item_deskr">Базовый уровень</p>
                         </div>
@@ -174,7 +162,7 @@
                     </div>
                 </div>
             </section>
-            <!-- <section class="feedback" id="feedback">
+            <section class="feedback" id="feedback">
                 <div class="container">
                     <div class="feedback__wrapper">
                         <h2 class="feedback__title">Мы открыты для общения</h2>
@@ -185,16 +173,16 @@
                                 <input class="form__input" placeholder="+7(___)___-__-__" required name="phone" id="phone" type="text">
                                 <input class="form__input" placeholder="your@mail.com" required name="email" id="email" type="email">
                             </div>
-                            <button class="about-us__btn btn">Заказать звонок</button>
+                            <button class="about-us__btn btn form__btn">Заказать звонок</button>
                         </form>
                     </div>
                 </div>
-            </section> -->
+            </section>
         </main>
-        <!-- <footer class="footer">
+        <footer class="footer">
             <nav>
                 <div class="container">
-                    <div class="menu">
+                    <div class="menu menu_footer">
                         <a class="menu__logo" href="#">
                              <div class="menu__logo_img">
                                  <svg width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -204,23 +192,23 @@
                                  </svg>
                             </div>
                         </a>
-                        <ul class="menu__list">
-                            <li class="menu__item"><a href="#about-us" class="menu__link">О компании</a></li>
-                            <li class="menu__item"><a href="#laboratory" class="menu__link">Товары</a></li>
-                            <li class="menu__item"><a href="#feedback" class="menu__link">Сотрудничество</a></li>
-                            <li class="menu__item"><a href="#" class="menu__link">Контакты</a></li>
+                        <ul class="menu__list menu__list_footer">
+                            <li class="menu__item   menu__item_footer"><a href="#about-us" class="menu__link">О компании</a></li>
+                            <li class="menu__item   menu__item_footer"><a href="#laboratory" class="menu__link">Товары</a></li>
+                            <li class="menu__item   menu__item_footer"><a href="#feedback" class="menu__link">Сотрудничество</a></li>
+                            <li class="menu__item   menu__item_footer"><a href="#" class="menu__link">Контакты</a></li>
                         </ul>
                          <a class="menu__call" href="tel:+79371234567">+7 (937) 1234567</a>
                     </div>
  
                 </div> 
-                <div class="hamburger">
+                <div class="hamburger hamburger_footer">
                     <span></span>
                     <span></span>
                     <span></span>
                 </div>   
             </nav>
-        </footer> -->
+        </footer>
     </div>
 
     <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
