delete shevrons and change height menu_list active

--- a/src/index.html
+++ b/src/index.html
@@ -148,7 +148,7 @@
                             <p class="laboratory__item_deskr">Базовый уровень</p>
                         </div>
                     </div>
-                    <div class="laboratory__shevron">
+                    <!-- <div class="laboratory__shevron">
                         <button class="laboratory__btn">
                             <svg width="11" height="20" viewBox="0 0 11 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path class="shevron" d="M10.1782 1.53857L1.61537 10.1014L10.1782 18.6643" stroke="black" stroke-width="1.57953"/>
@@ -159,7 +159,7 @@
                                 <path class="shevron" d="M10.1782 1.53857L1.61537 10.1014L10.1782 18.6643" stroke="black" stroke-width="1.57953"/>
                             </svg>                                
                         </button>
-                    </div>
+                    </div> -->
                 </div>
             </section>
             <section class="feedback" id="feedback">
