change info in block about-us

--- a/src/index.html
+++ b/src/index.html
@@ -108,7 +108,7 @@
                 <div class="container">
                     <div class="about-us__wrapper">
                         <h2 class="about-us__title">О нас</h2>
-                        <p class="about-us__deskr">Цифровые лаборатории для учеников и учителей - эффективное средство для практического изучения естественнонаучных дисциплин в современной школе. <span>Цифровые лаборатории для учеников и учителей - эффективное средство для практического изучения естественнонаучных дисциплин в современной школе.</span> </p>
+                        <p class="about-us__deskr">Цифровая лаборатория предназначена для проведения лабораторных и практических работ в рамках школьной общеобразовательной программы. Используя уникальные цифровые датчики, входящие в цифровую лабораторию, школьники смогут производить измерения рН, температуры окружающей среды и растворов, относительной влажности, освещенности и многие другие. </p>
                         <button class="about-us__btn btn">Заказать звонок</button>
                     </div>
                 </div>
@@ -148,18 +148,6 @@
                             <p class="laboratory__item_deskr">Базовый уровень</p>
                         </div>
                     </div>
-                    <!-- <div class="laboratory__shevron">
-                        <button class="laboratory__btn">
-                            <svg width="11" height="20" viewBox="0 0 11 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path class="shevron" d="M10.1782 1.53857L1.61537 10.1014L10.1782 18.6643" stroke="black" stroke-width="1.57953"/>
-                            </svg>                                
-                        </button>
-                        <button class="laboratory__btn laboratory__btn_right">
-                            <svg  width="11" height="20" viewBox="0 0 11 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path class="shevron" d="M10.1782 1.53857L1.61537 10.1014L10.1782 18.6643" stroke="black" stroke-width="1.57953"/>
-                            </svg>                                
-                        </button>
-                    </div> -->
                 </div>
             </section>
             <section class="feedback" id="feedback">
